--- a/package.json
+++ b/package.json
@@ -5,19 +5,24 @@
   "main": "./src/api/server.js",
   "scripts": {
     "start": "node .",
-    "dev": "nodemon ."
+    "dev": "nodemon .",
+    "test": "mocha ./src/tests/orders.test.js -t 10000 --exit"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.3.7",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "md5": "^2.3.0",
+    "mocha": "^10.2.0",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.28.0",
+    "sinon": "^15.0.1"
   },
   "devDependencies": {
     "eslint": "^8.30.0",
